# bevy_kumbanet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
assets/audio/effects/: license.txt
assets/audio/music/cereal/: license.txt
assets/audio/music/iquick143/: license.txt
assets/audio/slang/: license.txt
assets/boot/: license.txt
assets/shaders/post_processing/: dither_effect.wgsl  feedback.wgsl  flip_effect.wgsl  jpeg_dct.wgsl  jpeg_idct.wgsl  test_effect.wgsl
assets/ships/: ship.glb  ship.license.txt
assets/thoughts/images/debug/: license.txt
assets/thoughts/images/flickr/: aligator.license.txt  chair.license.txt  decay.license.txt  despair.license.txt  fog_man.license.txt  lock.license.txt  nature.license.txt
assets/thoughts/images/openclipart/: license.txt
assets/thoughts/images/various/: clouds.license.txt  love.license.txt
assets/thoughts/images/wikimedia/: abstract_deities.license.txt  bose_einstein.license.txt  cursed_stick_figures.license.txt
assets/ui/: license.txt
src/: boot.rs  components.rs  controls.rs  debug.rs  events.rs  main.rs  physics.rs  player.rs  resources.rs  score.rs  test_scene.rs  thoughts.rs  vfx.rs
src/animation/: animations.rs  mod.rs
src/audio/: mod.rs  slang.rs
src/cabin/: mod.rs  ui.rs
src/post_processing/: effects.rs  mod.rs  setup.rs
src/thoughts/: data.rs  mod.rs  systems.rs
