[package]
name = "bevy_kumbanet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Add optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable optimisation just for dependencies e.g. Bevy
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.10.1", features=["jpeg"] }
rand = "0.8.5"
bevy_editor_pls = "0.4.0"
bevy_obj = "0.10.1"
